--- a/projects/ex51/templates/index.html
+++ b/projects/ex51/templates/index.html
@@ -10,8 +10,11 @@ $if greeting:
     I just wanted to say <em style="color: green; font-size: 2em;">$greeting</em>
 $else:
     <em>Hello</em>, world!
-
-    <a href="/hello">Back to form.</a>
+<br/>
+<br/>
+<form action="/hello" method='GET'>
+    <input type="submit" value="Go to back to form">
+</form>
 
 </body>
 </html>
