Did a tiny bit at ex51, now uses a layout file to cover the boilerplate html.

--- a/projects/ex51/templates/oldHello_form.html
+++ b/projects/ex51/templates/oldHello_form.html
@@ -1,3 +1,9 @@
+<html>
+    <head>
+        <title>Sample Web Form</title>
+    </head>
+<body>
+
 <h1>Fill Out This Form</h1>
 
 <form action='/hello' method='POST'>
@@ -8,3 +14,5 @@
     <input type='submit'>
 </form>
 
+</body>
+</html>
