--- a/projects/ex51/templates/oldIndex.html
+++ b/projects/ex51/templates/oldIndex.html
@@ -1,11 +1,20 @@
 $def with (greeting)
 
+<html>
+    <head>
+        <title>Gothons Of Planet Percal #25</title>
+    </head>
+<body>
+
 $if greeting:
     I just wanted to say <em style="color: green; font-size: 2em;">$greeting</em>
 $else:
     <em>Hello</em>, world!
 <br/>
+<br/>
 <form action="/hello" method='GET'>
     <input type="submit" value="Go to back to form">
 </form>
 
+</body>
+</html>
