--- a/projects/ex51/templates/hello_form.html
+++ b/projects/ex51/templates/hello_form.html
@@ -1,10 +1,13 @@
 <h1>Fill Out This Form</h1>
 
 <form action='/hello' method='POST'>
-    A Greeting: <input type='text' name='greet'>
-    <br/>
-    Your Name: <input type='text' name='name'>
-    <br/>
-    <input type='submit'>
+    <fieldset>
+        <legend>Form To Fill Out</legend>
+        A Greeting: <input type='text' name='greet'>
+        <br/>
+        Your Name: <input type='text' name='name'>
+        <br/>
+        <input type='submit'>
+    </fieldset>
 </form>
 
