--- a/projects/ex51/templates/layout.html
+++ b/projects/ex51/templates/layout.html
@@ -3,10 +3,21 @@ $def with (content)
 <html>
 <head>
     <title>Gothons From Planet Percal #25</title>
+<style>
+h1  {
+    color:red;
+    border: 1px solid black;
+    padding: 10px;
+    margin: 30px;
+}
+
+</style>
 </head>
 <body>
+<center>
 <h1>THIS IS ABOVE</h1>
 $:content
 <h1>THIS IS BELOW</h1>
+</center>
 </body>
 </html>
